# chat_htm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run_gui.sh
build_qt_local/htm_flow/lib/yaml-cpp/: DartConfiguration.tcl
build_theme_check/htm_flow/lib/yaml-cpp/: DartConfiguration.tcl
build_theme_headless/htm_flow/: debug_region  htm_flow
build_theme_headless/htm_flow/lib/yaml-cpp/: DartConfiguration.tcl
configs/: default_text.yaml  small_text.yaml  word_rows_2layer_text.yaml  word_rows_text.yaml
docs/: ARCHITECTURE.md
gui/: build_image.sh  run_gui.sh
src/: main.cpp
src/encoders/: scalar_encoder.hpp  word_row_encoder.hpp
src/runtime/: text_runtime.cpp  text_runtime.hpp
src/text/: text_chunker.hpp  word_chunker.hpp
tests/integration/: test_text_htm.cpp
tests/test_data/: abc.txt  hello_world.txt  simple_patterns.txt  simple_sentences.txt
tests/unit/: test_scalar_encoder.cpp  test_text_chunker.cpp
